fix: input type+ input align+ alertbox

--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ body{
     border-radius: 5px;
     border:none; 
     outline:none;
+    width:150px;
+    text-align: center;
     background-color:lightblue;
     height:25px;
 }
